# Nodex

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  Rakefile  flake.nix  nodex-office.gemspec  nodex.gemspec
.github/workflows/: ci.yml  release.yml
docs/: baked-templates.md  build.md  components.md  cpp-api.md  documents.md  docx-odt.md  fwui-native.md  getting-started.md  hot-reload.md  index.md  math.md  nodex-native.md  packed-builder.md  pdf.md  performance.md  pipe-operator.md  ruby-dsl.md  server.md  use-cases.md  websocket.md
examples/cpp/: CMakeLists.txt  main.cpp
examples/ruby/: demo.rb  server.rb
fwui-native/ext/fwui_native/: fwui_docx.cpp
fwui-native/lib/fwui/native/: docx.rb
fwui-native/test/: test_docx.rb
include/fwui/: fwui.hpp  pdf_renderer.hpp
include/nodex/: core.hpp  decorators.hpp  elements.hpp  file_watcher.hpp  hot_reload.hpp  nodex.hpp  registry.hpp  renderer.hpp  template_engine.hpp
nodex-native/: Rakefile  nodex-native.gemspec
nodex-native/ext/nodex_native/: extconf.rb  nodex_docx.cpp  nodex_inja.cpp  nodex_native.c
nodex-native/lib/nodex/: native.rb
nodex-native/lib/nodex/native/: component.rb  doc.rb  docx.rb  packed_builder.rb
nodex-native/test/: bench_concurrent.rb  bench_dashboard.rb  bench_levels.rb  bench_memory.rb  bench_workers.rb  test_docx.rb  test_native.rb
nodex-office/lib/nodex/: office.rb
nodex-office/lib/nodex/office/: docx.rb  odt.rb  omml.rb
ruby/lib/: fwui.rb  nodex.rb
ruby/lib/nodex/: cli.rb  docx.rb  file_watcher.rb  hot_reload_js.rb  interactive_hub.rb  lumina_loader.rb  markdown.rb  mime.rb  page_loader.rb  platform.rb  registry.rb  server.rb  session.rb  template.rb  version.rb  websocket.rb  ws_hub.rb
ruby/tests/: test_packed_native.rb  test_packed_pure.rb
src/: core.cpp  decorators.cpp  elements.cpp  file_watcher.cpp  hot_reload.cpp  main.cpp  pdf_cli.cpp  pdf_fonts.cpp  pdf_fonts.hpp  pdf_layout.cpp  pdf_layout.hpp  pdf_renderer.cpp  registry.cpp  renderer.cpp  template_engine.cpp
tests/: bench_cpp.cpp  bench_memory.cpp  test_decorators.cpp  test_elements.cpp  test_node.cpp  test_pdf_renderer.cpp  test_registry.cpp  test_renderer.cpp  test_template_engine.cpp
